fix fomo rounded edge error and restyle the button just a bit to be more aligned with overall design

--- a/packages/nouns-webapp/src/components/Bid/Bid.module.css
+++ b/packages/nouns-webapp/src/components/Bid/Bid.module.css
@@ -102,6 +102,9 @@
   border: transparent;
   background-color: var(--brand-black);
   font-weight: bold;
+  font-family: 'PT Root UI';
+  font-size: 18px;
+  border-radius: 10px;
 }
 
 .bidBtnAuctionEnded:hover,
